[package]
name = "usb-enumeration"
version = "0.0.1"
description = "A cross platform library that returns the vendor and product IDs of currently connected USB devices"
authors = ["Tim Fish <tim@timfish.uk>"]
repository = "https://github.com/timfish/usb-enumeration-rs"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["lib"]

[features]
# Used to fail build on warnings
strict = []

[dependencies]
failure = "0.1"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["setupapi", "impl-debug", "impl-default"] }
[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.2.0"
[target.'cfg(target_os = "macos")'.dependencies]
io-kit-sys = "0.1.0"
mach = "0.3.2"
core-foundation = "0.6"