[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "A cross platform library that returns details of currently connected USB devices"
edition = "2018"
license = "MIT"
name = "usb_enumeration"
readme = "README.md"
repository = "https://github.com/meatysolutions/usb_enumeration"
version = "0.2.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
# Used to fail build on warnings
strict = []

[dependencies]
crossbeam = "0.8"
num_enum = "0.7.2"
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation"] }
[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4.1"
mach = "0.3.2"
